 * Genre/artist links can now be opened in a new browser tab
 * (Hopefully) fixed an encoding issue that would cause errors in search
 * Reduced the number of HTTP requests when the current song has no cover art
 * Generally reduced the number of requests to mpd
 * Fixed an issue that could cause errors when modwsgi reloaded the application
 * Rewrote/reorganized most of the javascript code
 * Updated the included libraries to scriptaculous 1.9.0 / prototype 1.7
 * Updated example config files for apache

== 0.5.2 (02 Dec 2010) ==

 * Use mpd's "consume" command if available (versions >= 0.15)
 * Added support for in-directory cover art
 * Cover art can now be cached
 * Auto-queuing can now be limited to a specific genre
 * Albums are now properly sorted on the search result page
 * The current track's time display should be updated much more smoothly now

== 0.5.1 (07 Jul 2010) ==

 * Catch some more exceptions and properly close all connections if they occur
 * Added classifiers to setup.py
 * fookebox' version information is now read from the package meta data

== 0.5.0 (01 Jul 2010) ==

 * Re-implemented fookebox in Python (using Pylons)
 * Added support for rhythmbox' covert art file naming scheme
 * Added German translation

== 0.4.3 (21 Jun 2010) ==

 * Fixed a possible race-condition where a song would get played twice in a row
 * Synchronized javascript with upcoming 0.5 release
 * Artist, genre names and cover paths are now base64 encoded

== 0.4.2 (24 May 2010) ==

 * Database rebuild was broken, fixed
 * Fixed typo in README

== 0.4.1 (23 Mar 2010) ==

 * Thanks to Gavin Cameron for his contributions
 * Can now pick the auto-queued songs from a predefined playlist
 * Some internal code cleanup
 * Changed license to GPLv3
 * Set the default time zone to UTC to get PHP to shut up (Gavin)
 * Replaced calls to split (deprecated) with explode (Gavin)
 * Added support for cover art for compilations (Gavin again, also: see README)