@@ -1,0 +1,36 @@
+#artistList, #genreList {
+	position: relative;
+	top: 0;
+}
+
+#browse-menu {
+	position: relative;
+	top: 0;
+}
+
+#letterSelector {
+	padding: 0 10px 20px 10px;
+	position: relative;
+	top: 0;
+}
+
+#searchResult {
+	position: relative;
+	left: 26px;
+	top: 8px;
+	margin-right: 50px;
+}
+
+#meta {
+	display: none;
+}
+
+#status {
+	float: right;
+	position: relative;
+	top: 0;
+}
+
+h1 {
+	margin-bottom: 1px;
+}
